rust-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustapp-service
spec:
  selector:
    app: rustapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
