ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-agomez-ingress
spec:
  rules:
    - host: api.agomez.com
      http:
        paths:
          - pathType: Prefix
            path: /users
            backend:
              service:
                name: rustapp-service
                port:
                  number: 80
